[gd_scene load_steps=23 format=3 uid="uid://bxtyfo1fbee7j"]

[ext_resource type="Texture2D" uid="uid://tocs3p0c4i6u" path="res://Assets/Pictures/Sky.png" id="1_48xlc"]
[ext_resource type="Script" uid="uid://dlb2ub16h02d4" path="res://Scenes/main_menu.gd" id="1_opfnp"]
[ext_resource type="Texture2D" uid="uid://d2bfudew2pxcy" path="res://Assets/Pictures/Ground.png" id="2_1ehe0"]
[ext_resource type="Texture2D" uid="uid://dqb588w52r7b2" path="res://Assets/Pictures/Player.png" id="3_1ehe0"]
[ext_resource type="FontFile" uid="uid://buvbp6jbbtoh5" path="res://Assets/Game_Font.ttf" id="4_ce3w2"]
[ext_resource type="StyleBox" uid="uid://wjxpaacbjfpp" path="res://Assets/Button Setting.tres" id="5_n45e2"]
[ext_resource type="AudioStream" uid="uid://cutewbhgbxlhx" path="res://Assets/Audio/Game Music 5.mp3" id="7_cp0ys"]
[ext_resource type="Texture2D" uid="uid://bq2g5nia1e37k" path="res://Assets/Pictures/Player Deep Blue.png" id="8_trj04"]
[ext_resource type="Texture2D" uid="uid://cy3wl6pei8jok" path="res://Assets/Pictures/Player Red.png" id="9_16hvj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vr1f0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t1dhk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_trj04"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vtepg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8dnnj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m3bi6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wyh8j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_16hvj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mkpwh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4nkqq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ehtkc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5egv6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ujyyl"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_opfnp")

[node name="Sprite2D" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -1489.0
offset_top = -963.9998
offset_right = -70.03296
offset_bottom = 1203.436
scale = Vector2(3.2939453, 1.8196615)
texture = ExtResource("1_48xlc")
flip_h = true

[node name="Sprite2D2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -582.9999
offset_top = 915.0002
offset_right = 953.0001
offset_bottom = 1939.0002
scale = Vector2(2.2988281, 1.7167969)
texture = ExtResource("2_1ehe0")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 440.99997
offset_top = 16.000002
offset_right = 1403.0
offset_bottom = 201.0
scale = Vector2(1.2399999, 1.2399999)
theme_override_colors/font_color = Color(0, 0.4969148, 0.9166123, 1)
theme_override_fonts/font = ExtResource("4_ce3w2")
theme_override_font_sizes/font_size = 200
text = "Platformer"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_cp0ys")
autoplay = true

[node name="Skin Black" type="Button" parent="."]
layout_mode = 0
offset_left = 284.0
offset_top = 120.0
offset_right = 1572.0
offset_bottom = 848.0
scale = Vector2(1.9950875, 1.9950875)
theme_override_styles/normal = SubResource("StyleBoxEmpty_vr1f0")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_t1dhk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_trj04")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_vtepg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8dnnj")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_m3bi6")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_wyh8j")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_16hvj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mkpwh")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4nkqq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ehtkc")
icon = ExtResource("3_1ehe0")

[node name="Skin Deep Blue" type="Button" parent="."]
layout_mode = 0
offset_left = 865.0
offset_top = 335.0
offset_right = 1165.0
offset_bottom = 635.0
scale = Vector2(0.71508694, 0.71508694)
theme_override_styles/normal = SubResource("StyleBoxEmpty_vr1f0")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_t1dhk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5egv6")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_vtepg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8dnnj")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_m3bi6")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_wyh8j")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ujyyl")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mkpwh")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4nkqq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ehtkc")
icon = ExtResource("8_trj04")

[node name="Skin Red" type="Button" parent="."]
layout_mode = 0
offset_left = 1175.0
offset_top = 335.0
offset_right = 1475.0
offset_bottom = 635.0
scale = Vector2(0.71508694, 0.71508694)
theme_override_styles/normal = SubResource("StyleBoxEmpty_vr1f0")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_t1dhk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5egv6")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_vtepg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8dnnj")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_m3bi6")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_wyh8j")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ujyyl")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mkpwh")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4nkqq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ehtkc")
icon = ExtResource("9_16hvj")

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 610.0
offset_top = 687.0
offset_right = 1624.0
offset_bottom = 964.0
scale = Vector2(0.7200017, 0.7200017)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_ce3w2")
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = ExtResource("5_n45e2")
theme_override_styles/normal_mirrored = ExtResource("5_n45e2")
theme_override_styles/pressed = ExtResource("5_n45e2")
theme_override_styles/pressed_mirrored = ExtResource("5_n45e2")
theme_override_styles/hover = ExtResource("5_n45e2")
theme_override_styles/hover_mirrored = ExtResource("5_n45e2")
theme_override_styles/hover_pressed = ExtResource("5_n45e2")
theme_override_styles/hover_pressed_mirrored = ExtResource("5_n45e2")
theme_override_styles/disabled = ExtResource("5_n45e2")
theme_override_styles/disabled_mirrored = ExtResource("5_n45e2")
theme_override_styles/focus = ExtResource("5_n45e2")
text = "  ▶️  Start  "

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 604.0
offset_top = 568.0
offset_right = 1361.0
offset_bottom = 661.0
theme_override_colors/font_color = Color(0.934954, 0.934954, 0.934954, 1)
theme_override_fonts/font = ExtResource("4_ce3w2")
theme_override_font_sizes/font_size = 100
text = "Choose your skin."

[connection signal="pressed" from="Skin Black" to="." method="_on_skin_black_pressed"]
[connection signal="pressed" from="Skin Deep Blue" to="." method="_on_skin_deep_blue_pressed"]
[connection signal="pressed" from="Skin Red" to="." method="_on_skin_red_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
